Adição de mais referências no código + alteração na navegacao

--- a/MLP_MOFs.ipynb
+++ b/MLP_MOFs.ipynb
@@ -16,32 +16,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e70607c7",
-   "metadata": {},
-   "source": [
-    "**Resumo do Problema**\n",
-    "\n",
-    "**De onde vieram nossos dados?**\n",
-    "\n",
-    "**Features**\n",
-    "\n",
-    "**Targets**\n",
-    "\n",
-    "**O que são MOFs**\n",
-    "\n",
-    "**O que utilizamos como base para o código**\n",
-    "\n",
-    "____\n",
-    "**Montar o script**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b99e390e",
    "metadata": {},
    "source": [
     "<a id=\"sumario\"></a>\n",
     "## Sumário\n",
+    "\n",
+    "Para navegar pelo nosso Notebook, clique na sessão que deseja visitar! ;)\n",
     "\n",
     "[<font color='red'>[1] Adquirindo dados</font>](#adquirindodados)\n",
     "\n",
@@ -102,9 +83,12 @@
    "id": "de4282f0",
    "metadata": {},
    "source": [
+    "<a id=\"adquirindodados\"></a>\n",
     "## 1-  Adquirindo Dados\n",
     "\n",
-    "___"
+    "___\n",
+    "\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -133,8 +117,10 @@
    "id": "a6654ac1",
    "metadata": {},
    "source": [
+    "<a id=\"analisededados\"></a>\n",
     "## 2 - Análise de Dados\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -180,9 +166,9 @@
    "outputs": [],
    "source": [
     "#aplicando filtro para \n",
-    "dados_fingertrain_filtrado = dados_treino_finger.loc[dados_treino_finger['mof'].isin(intercecao_treino)] #referncia: https://pt.stackoverflow.com/questions/309037/filtrar-linhas-no-pandas-por-uma-lista\n",
+    "dados_fingertrain_filtrado = dados_treino_finger.loc[dados_treino_finger['mof'].isin(intercecao_treino)] #referencia: https://pt.stackoverflow.com/questions/309037/filtrar-linhas-no-pandas-por-uma-lista\n",
     "dados_ractrain_filtrado = dados_treino_RAC.loc[dados_treino_RAC['mof'].isin(intercecao_treino)]\n",
-    "dados_fingertest_filtrado = dados_teste_finger.loc[dados_teste_finger['mof'].isin(intercecao_teste)] #referncia: https://pt.stackoverflow.com/questions/309037/filtrar-linhas-no-pandas-por-uma-lista\n",
+    "dados_fingertest_filtrado = dados_teste_finger.loc[dados_teste_finger['mof'].isin(intercecao_teste)] #referencia: https://pt.stackoverflow.com/questions/309037/filtrar-linhas-no-pandas-por-uma-lista\n",
     "dados_ractest_filtrado = dados_teste_RAC.loc[dados_teste_RAC['mof'].isin(intercecao_teste)]"
    ]
   },
@@ -845,8 +831,10 @@
    "id": "e10c19f3",
    "metadata": {},
    "source": [
+    "<a id=\"tratamentodedados\"></a>\n",
     "## 3 - Tratamento de Dados\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -862,7 +850,7 @@
    "id": "619291da",
    "metadata": {},
    "source": [
-    "Para a implementação do `VIF` é necessário dados numéricos e nosso dataset possui uma mescla de dados str e dados int/float. Alguns dados str/object devem ser mantidos e para isso vamos realizar uma conversão simbólico-numérico, este é o caso do `metal`. A coluna `linker1smi` será transformada em um número com o auxílio da biblioteca `rdkit` com o módulo `Chem`."
+    "Para a implementação do `VIF` é necessário dados numéricos e nosso dataset possui uma mescla de dados `str` e dados `int/float`. A coluna `linker1smi` será transformada em uma matriz `fingerprint` com o auxílio da biblioteca `rdkit` com o módulo `Chem`[$.^{[16,17,18, 19]}$](#referencias)"
    ]
   },
   {
@@ -928,7 +916,7 @@
    "metadata": {},
    "source": [
     "## <font color='red'>Atenção!</font>\n",
-    "Os códigos abaixo que dizem respeito à exploração dos dados contidos na coluna `linker1smi` foram baseados nos códigos de um usuário do KAGGLE `Marquis03`."
+    "Os códigos abaixo que dizem respeito à exploração dos dados contidos na coluna `linker1smi` foram baseados nos códigos de um usuário do KAGGLE `Marquis03`[$.^{[2]}$](#referencias)"
    ]
   },
   {
@@ -936,7 +924,7 @@
    "id": "a3289608",
    "metadata": {},
    "source": [
-    "Como era de se imaginar, ele adicionou uma coluna para cada bit do fingerprint. Sabendo que todas as informações que necessitamos foram recolhidas, não vejo a necessidade de aumentar tanto o número de `Features` do nosso dataset."
+    "Ele adicionou uma coluna para cada bit do `fingerprint`. Sabendo que todas as informações que necessitamos foram recolhidas, não vejo a necessidade de aumentar tanto o número de `Features` do nosso dataset[$.^{[2]}$](#referencias)"
    ]
   },
   {
@@ -949,19 +937,19 @@
     "def stri_to_mol(df, with_linker1smi=False):\n",
     "    \n",
     "    if with_linker1smi==False:\n",
-    "        #print('Estou no if false')\n",
+    "       \n",
     "        molecula = df['linker1smi'].apply(Chem.MolFromSmiles)\n",
     "        df = df.drop('linker1smi', axis=1)\n",
     "        df = df.drop('metal', axis=1)\n",
-    "        #print('Df antes de novos_parametros', df) #debug\n",
+    "        \n",
     "        parametros_novos(df, molecula)\n",
-    "        #print('Df depois de novos_parametros', df)#debug\n",
+    "       \n",
     "    if with_linker1smi==True:\n",
     "        \n",
     "        molecula = df['linker1smi'].apply(Chem.MolFromSmiles)\n",
     "        df =df.drop('metal', axis=1)\n",
     "        fingerprint = lambda x: al.GetMorganFingerprintAsBitVect(x, 3)\n",
-    "        #baseado no código do Marquis03\n",
+    "        #Início: baseado no código do Marquis03\n",
     "        fingerprint1 = np.array(molecula.apply(fingerprint).tolist())             \n",
     "        fingerprint1 = pd.DataFrame(fingerprint1).add_prefix(\"fp1_\")\n",
     "        fingerprint1.index = df.index\n",
@@ -1012,7 +1000,7 @@
    "id": "1cbede51",
    "metadata": {},
    "source": [
-    "Com os valores de `linker1smi` convertidos, temos agora todas as informações sobre cada molécula presente no `dataset`. Do código que nos baseamos, ele adicionava os dados do array do `fingerprint` como colunas separadamente. Vamos tentar partir de outro ponto, nós vamos retirar a coluna `linker1smi` e realizar o VIF para diminuir a multicolinearidade e o número de dimensões."
+    "Com os valores de `linker1smi` convertidos, temos agora todas as informações sobre cada molécula presente no `dataset`[$.^{[2]}$](#referencias) Do código que nos baseamos, ele adicionava os dados do array do `fingerprint` como colunas separadamente. Vamos tentar partir de outro ponto, nós vamos retirar a coluna `linker1smi` e realizar o VIF para diminuir a multicolinearidade e o número de dimensões."
    ]
   },
   {
@@ -1020,8 +1008,10 @@
    "id": "cbf217ca",
    "metadata": {},
    "source": [
+    "<a id=\"reduzindoadimensionalidade\"></a>\n",
     "## 4 - Reduzindo a Dimensionalidade com o VIF\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -1616,8 +1606,10 @@
     "tags": []
    },
    "source": [
+    "<a id='separandotargetefeatures'></a>\n",
     "## 5 - Separando `TARGET` e `FEATURES`\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -2363,8 +2355,6 @@
     }
    ],
    "source": [
-    "#TARGET_treino = VIF_treino_finger[['temperature', 'time']]\n",
-    "\n",
     "indices = VIF_treino_finger.index\n",
     "indices_treino_val, indices_teste = train_test_split(indices, \n",
     "                                                    test_size=TAMANHO_TESTE, \n",
@@ -2462,7 +2452,8 @@
     "___\n",
     "## <font color='red'>Atenção!</font>\n",
     "\n",
-    "Os códigos abaixo foram escritos/inspirados a partir dos códigos dos cadernos jupyter do professor Daniel Roberto Cassar$.^{[ref]}$\n",
+    "Os códigos abaixo foram escritos/inspirados a partir dos códigos dos cadernos jupyter do professor Daniel Roberto Cassar [$.^{[10,11,12]}$](#referencias)\n",
+    "\n",
     "___"
    ]
   },
@@ -2471,8 +2462,10 @@
    "id": "1b9d7e5b",
    "metadata": {},
    "source": [
+    "<a id='implementandoredeneural'></a>\n",
     "## 6 - Implementação da Rede Neural\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -3023,8 +3016,10 @@
     "tags": []
    },
    "source": [
+    "<a id='curvadeaprendizado'></a>\n",
     "## 7 - Curva de Aprendizado\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -3078,8 +3073,11 @@
    "id": "96c8983b",
    "metadata": {},
    "source": [
+    "<a id='otimizacaodehiperparametros'></a>\n",
+    "\n",
     "## 8 - Otimização de Hiperparâmetros\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -76378,8 +76376,10 @@
    "id": "d61e2e4b",
    "metadata": {},
    "source": [
+    "<a id='calculodermse'></a>\n",
     "## 9 - Cálculo de RMSE\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -76440,7 +76440,10 @@
    "id": "2939989b",
    "metadata": {},
    "source": [
-    "# 10 - Conclusão"
+    "<a id='conclusao'></a>\n",
+    "# 10 - Conclusão\n",
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -76456,8 +76459,10 @@
    "id": "7bcea198",
    "metadata": {},
    "source": [
+    "<a id='agradecimentos'></a>\n",
     "# 11 - Agradecimentos\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -76466,9 +76471,16 @@
    "metadata": {},
    "source": [
     "Agradecimentos finais:\n",
-    "- *Daniel Cassar:* Nosso professor, que nos orientou para realizar o trabalho\n",
-    "- *Andrej Karpathy:* Vídeos completos e excelentes que nos auxiliou para resolução e entendimento do trabalho\n",
-    "- *Mell e Laika* que são animais de estimação de integrantes do grupo, auxiliaram com apoio emocional e no processo de debugar o código"
+    "- *Daniel Cassar:* Nosso professor, que nos orientou para realizar o trabalho.\n",
+    "\n",
+    "\n",
+    "- *Andrej Karpathy:* Vídeos completos e excelentes que nos auxiliou para resolução e entendimento do trabalho.\n",
+    "\n",
+    "\n",
+    "- *Valéria Spolon Marangoni*: Nossa professora, que nos orientou durante a nossa busca em compreender as features presentes no dataframe.\n",
+    "\n",
+    "\n",
+    "- *Mell e Laika* que são animais de estimação de integrantes do grupo, auxiliaram com apoio emocional e no processo de debugar o código."
    ]
   },
   {
@@ -76476,8 +76488,10 @@
    "id": "3b3df298",
    "metadata": {},
    "source": [
+    "<a id='referencias'></a>\n",
     "# 12 - Referências Bibliográficas\n",
-    "___"
+    "___\n",
+    "[Voltar ao topo](#sumario)"
    ]
   },
   {
@@ -76499,7 +76513,11 @@
     "[12] Cassar, Daniel Roberto. Notebook 8: Seleção de Atributos e redução de dimensionalidade. <br>\n",
     "[13] KAGGLE. Rac predicts temperature using LSTM. Available at: https://www.kaggle.com/code/marquis03/rac-predicts-temperature-using-lstm. Accessed on: 19 May 2024. <br>\n",
     "[14] SNRR, Randall Q.; COLÓN, Yamil J.; GÓMEZ-GUALDRÓN, Diego A. Topologically Guided, Automated Construction of Metal−Organic Frameworks and Their Evaluation for Energy-Related Applications. ACS, 2017. <br>\n",
-    "[15] BUCIOR, Benjamin J.; ROSEN, Andrew S.; HARANCZYK, Maciej; YAO, Zhenpeng; ZIEBEL, Michael E.; FARHA, Omar K.; HUPP, Joseph T.; SIEPMANN, J. Ilja; ASPURU-GUZIK, Alan; SNRR, Randall Q. Identification Schemes for Metal−Organic Frameworks To Enable Rapid Search and Cheminformatics Analysis. ACS, 2019. <br>"
+    "[15] BUCIOR, Benjamin J.; ROSEN, Andrew S.; HARANCZYK, Maciej; YAO, Zhenpeng; ZIEBEL, Michael E.; FARHA, Omar K.; HUPP, Joseph T.; SIEPMANN, J. Ilja; ASPURU-GUZIK, Alan; SNRR, Randall Q. Identification Schemes for Metal−Organic Frameworks To Enable Rapid Search and Cheminformatics Analysis. ACS, 2019. <br>\n",
+    "[16] FOR_CODE. Curso: [Import rdkit]. Disponível em: https://www.youtube.com/watch?v=CEyB3RvCfCI&list=PLSL3Gm4CBwHGWufaMHq3y8pN7KvbZzm1W.<br>\n",
+    "[17] Knasmueller, Bernhard. Chemistry with Python - an Introduction to RDKit. Disponível em: https://www.youtube.com/watch?v=9Z9XM9xamDU.<br>\n",
+    "[18] MACHINE LEARNING IN CHEMISTRY FROM SCRATCH. Calculating Molecular Descriptors using RDKit and Mordred. Disponível em: https://www.youtube.com/watch?v=9i9SY6Nd1Zw&t=974s. <br>\n",
+    "[19] RDKit: Open-Source Cheminformatics Software. Disponível em: https://www.rdkit.org. <br>"
    ]
   }
  ],
