--- a/MLP_MOFs.ipynb
+++ b/MLP_MOFs.ipynb
@@ -2556,7 +2556,6 @@
     "        for i in range(len(neuronios)-1):\n",
     "            camada = nn.Linear(neuronios[i], neuronios[i+1])\n",
     "            camadasTotais.append(camada)\n",
-    "            camadasTotais.append(nn.ReLU())\n",
     "        camadasTotais.append(nn.Linear(neuronios[-1], numSaida))\n",
     "\n",
     "        self.camadas = nn.Sequential(*camadasTotais)\n",
@@ -76514,12 +76513,22 @@
     "[13] KAGGLE. Rac predicts temperature using LSTM. Available at: https://www.kaggle.com/code/marquis03/rac-predicts-temperature-using-lstm. Accessed on: 19 May 2024. <br>\n",
     "[14] SNRR, Randall Q.; COLÓN, Yamil J.; GÓMEZ-GUALDRÓN, Diego A. Topologically Guided, Automated Construction of Metal−Organic Frameworks and Their Evaluation for Energy-Related Applications. ACS, 2017. <br>\n",
     "[15] BUCIOR, Benjamin J.; ROSEN, Andrew S.; HARANCZYK, Maciej; YAO, Zhenpeng; ZIEBEL, Michael E.; FARHA, Omar K.; HUPP, Joseph T.; SIEPMANN, J. Ilja; ASPURU-GUZIK, Alan; SNRR, Randall Q. Identification Schemes for Metal−Organic Frameworks To Enable Rapid Search and Cheminformatics Analysis. ACS, 2019. <br>\n",
-    "[16] Andrej Karpathy. 2023. Playlist de vídeos. Disponível em: https://www.youtube.com/watch?v=VMj-3S1tku0&list=PLAqhIrjkxbuWI23v9cThsA9GvCAUhRvKZ. Acesso em: 20 maio 2024.\n",
+    "[16] Andrej Karpathy. 2023. Playlist de vídeos. Disponível em: https://www.youtube.com/watch?v=VMj-3S1tku0&list=PLAqhIrjkxbuWI23v9cThsA9GvCAUhRvKZ. Acesso em: 20 maio 2024.<br>\n",
     "[17] FOR_CODE. Curso: [Import rdkit]. Disponível em: https://www.youtube.com/watch?v=CEyB3RvCfCI&list=PLSL3Gm4CBwHGWufaMHq3y8pN7KvbZzm1W.<br>\n",
     "[18] Knasmueller, Bernhard. Chemistry with Python - an Introduction to RDKit. Disponível em: https://www.youtube.com/watch?v=9Z9XM9xamDU.<br>\n",
     "[19] MACHINE LEARNING IN CHEMISTRY FROM SCRATCH. Calculating Molecular Descriptors using RDKit and Mordred. Disponível em: https://www.youtube.com/watch?v=9i9SY6Nd1Zw&t=974s. <br>\n",
-    "[20] RDKit: Open-Source Cheminformatics Software. Disponível em: https://www.rdkit.org. <br>"
+    "[20] RDKit: Open-Source Cheminformatics Software. Disponível em: https://www.rdkit.org. <br>\n",
+    "[21] Lightning Documentation, Available at: https://lightning.ai/docs/pytorch/stable/. Acessed on: 20 may 2024 <br>\n",
+    "[22] Pytorch Discussion: https://discuss.pytorch.org/t/how-to-create-mlp-model-with-arbitrary-number-of-hidden-layers/13124. Acessed on: 20 may 2024<br>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44ca43a3-3a24-4181-8029-6e1b7ec80b01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
