Organizacao dos imports, adicao de escript atualizado

--- a/MLP_MOFs.ipynb
+++ b/MLP_MOFs.ipynb
@@ -54,37 +54,33 @@
    "execution_count": 1,
    "id": "49c0cc91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\caued\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from rdkit import Chem\n",
     "import optuna\n",
-    "from rdkit.Chem import AllChem as al\n",
-    "from rdkit.Chem import Draw, AllChem, Descriptors\n",
-    "from cod_izaque import converte\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import lightning as L\n",
-    "from lightning.pytorch.callbacks.early_stopping import EarlyStopping\n",
-    "import matplotlib.pyplot as plt\n",
     "import pickle\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from scipy import stats\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.preprocessing import MaxAbsScaler\n",
+    "import matplotlib.pyplot as plt\n",
+    "import funcoes_metal_organic_predict as funcoes\n",
+    "\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import AllChem as al\n",
+    "from rdkit.Chem import Draw, AllChem, Descriptors\n",
+    "\n",
     "from torch.nn import functional as F\n",
-    "from torch.utils.data import DataLoader, TensorDataset"
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
+    "from lightning.pytorch.callbacks.early_stopping import EarlyStopping\n",
+    "\n",
+    "from scipy import stats\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import MaxAbsScaler"
    ]
   },
   {
@@ -137,39 +133,23 @@
    "id": "060380e5",
    "metadata": {},
    "source": [
-    "### Identificando Dados presentes em ambos DFs"
+    "### Identificando Dados presentes em ambos DFs[$^{[24]}$](#referencias)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "83e172d5",
+   "id": "5ffde13a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def enc_intersection(dados1, dados2):\n",
-    "    a = set(list(dados1))\n",
-    "    b = set(list(dados2))\n",
-    "    \n",
-    "    c = a.intersection(b)\n",
-    "    \n",
-    "    return c"
+    "intercecao_treino = funcoes.enc_intersection(dados_treino_finger['mof'].values, dados_treino_RAC['mof'].values)\n",
+    "intercecao_teste = funcoes.enc_intersection(dados_teste_finger['mof'].values, dados_teste_RAC['mof'].values)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ffde13a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "intercecao_treino = enc_intersection(dados_treino_finger['mof'].values, dados_treino_RAC['mof'].values)\n",
-    "intercecao_teste = enc_intersection(dados_teste_finger['mof'].values, dados_teste_RAC['mof'].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "32da6f13",
    "metadata": {},
    "outputs": [],
@@ -191,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b2d6872c",
    "metadata": {
     "tags": []
@@ -202,7 +182,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 361 entries, 0 to 513\n",
+      "Int64Index: 361 entries, 0 to 513\n",
       "Data columns (total 24 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
@@ -241,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "003cbd97",
    "metadata": {
     "tags": []
@@ -252,7 +232,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 361 entries, 0 to 534\n",
+      "Int64Index: 361 entries, 0 to 534\n",
       "Columns: 354 entries, mof to additive_category\n",
       "dtypes: float64(260), int64(93), object(1)\n",
       "memory usage: 1001.2+ KB\n"
@@ -265,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2fa6c51f",
    "metadata": {
     "tags": []
@@ -276,7 +256,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 134 entries, 0 to 133\n",
+      "Int64Index: 134 entries, 0 to 133\n",
       "Data columns (total 22 columns):\n",
       " #   Column           Non-Null Count  Dtype \n",
       "---  ------           --------------  ----- \n",
@@ -313,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "caecfdde",
    "metadata": {
     "tags": []
@@ -324,7 +304,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 134 entries, 0 to 133\n",
+      "Int64Index: 134 entries, 0 to 133\n",
       "Columns: 342 entries, mof to CH4HPSTP\n",
       "dtypes: float64(255), int64(87)\n",
       "memory usage: 359.1 KB\n"
@@ -345,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "89f5e6d0",
    "metadata": {
     "tags": []
@@ -466,7 +446,7 @@
        "[361 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "15cf9410",
    "metadata": {
     "tags": []
@@ -586,7 +566,7 @@
        "[134 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b555341c",
    "metadata": {
     "tags": []
@@ -694,7 +674,7 @@
        "[361 rows x 1 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,21 +693,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ccf9fc28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista = ['mof', 'metal', 'linker1smi']\n",
-    "\n",
-    "def converte_datatype(df, lista_com_colunas_covrt, type_converte):\n",
-    "    for coluna in lista_com_colunas_covrt:\n",
-    "        df[coluna] = converte(df[coluna], type_converte)"
+    "lista = ['mof', 'metal', 'linker1smi']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d020c8a8",
    "metadata": {},
    "outputs": [
@@ -735,19 +711,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\caued\\AppData\\Local\\Temp\\ipykernel_9964\\1425689555.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\izaque23003\\OneDrive - ILUM ESCOLA DE CIÊNCIA\\backup\\Área de Trabalho\\eu_ilum\\trabalho_redes_neurais\\Metal-Organic-Prediction\\funcoes_metal_organic_predict.py:33: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[coluna] = converte(df[coluna], type_converte)\n"
+      "  df[coluna] = df[coluna].astype(type_converte)\n"
      ]
     }
    ],
    "source": [
-    "converte_datatype(dados_fingertrain_filtrado, lista, 'string')\n",
-    "converte_datatype(dados_fingertest_filtrado, lista[1:], 'string')\n",
-    "converte_datatype(dados_ractrain_filtrado, lista[:1], 'string')"
+    "funcoes.converte_datatype(dados_fingertrain_filtrado, lista, 'string')\n",
+    "funcoes.converte_datatype(dados_fingertest_filtrado, lista[1:], 'string')\n",
+    "funcoes.converte_datatype(dados_ractrain_filtrado, lista[:1], 'string')"
    ]
   },
   {
@@ -760,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9412f0cc",
    "metadata": {
     "scrolled": true,
@@ -781,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "0b0b0bc1",
    "metadata": {},
    "outputs": [
@@ -799,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "6fcddb6c",
    "metadata": {
     "tags": []
@@ -819,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "98e81efc",
    "metadata": {},
    "outputs": [
@@ -859,12 +835,12 @@
    "id": "619291da",
    "metadata": {},
    "source": [
-    "Para a implementação do `VIF` é necessário dados numéricos e nosso dataset possui uma mescla de dados `str` e dados `int/float`. A coluna `linker1smi` será transformada em uma matriz `fingerprint` com o auxílio da biblioteca `rdkit` com o módulo `Chem`[$.^{[16,17,18, 19]}$](#referencias)"
+    "Para a implementação do `VIF` é necessário dados numéricos e nosso dataset possui uma mescla de dados `str` e dados `int/float`. A coluna `linker1smi` será transformada em uma matriz `fingerprint` com o auxílio da biblioteca `rdkit` com o módulo `Chem`[$.^{[17,18, 19, 20]}$](#referencias)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "f26e9c8a",
    "metadata": {},
    "outputs": [],
@@ -875,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "b14fce50",
    "metadata": {},
    "outputs": [],
@@ -886,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "f4a588c3",
    "metadata": {},
    "outputs": [],
@@ -897,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "a27f8fc3",
    "metadata": {},
    "outputs": [],
@@ -908,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "477d118d",
    "metadata": {},
    "outputs": [],
@@ -938,49 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "c240e157",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def stri_to_mol(df, with_linker1smi=False):\n",
-    "    \n",
-    "    if with_linker1smi==False:\n",
-    "       \n",
-    "        molecula = df['linker1smi'].apply(Chem.MolFromSmiles)\n",
-    "        df = df.drop('linker1smi', axis=1)\n",
-    "        df = df.drop('metal', axis=1)\n",
-    "        \n",
-    "        parametros_novos(df, molecula)\n",
-    "       \n",
-    "    if with_linker1smi==True:\n",
-    "        \n",
-    "        molecula = df['linker1smi'].apply(Chem.MolFromSmiles)\n",
-    "        df =df.drop('metal', axis=1)\n",
-    "        fingerprint = lambda x: al.GetMorganFingerprintAsBitVect(x, 3)\n",
-    "        #Início: baseado no código do Marquis03\n",
-    "        fingerprint1 = np.array(molecula.apply(fingerprint).tolist())             \n",
-    "        fingerprint1 = pd.DataFrame(fingerprint1).add_prefix(\"fp1_\")\n",
-    "        fingerprint1.index = df.index\n",
-    "        df =df.drop('linker1smi', axis=1)\n",
-    "        df = pd.concat([df, fingerprint1], axis=1)\n",
-    "        #Fim\n",
-    "        parametros_novos(df, molecula)\n",
-    "    \n",
-    "    return df\n",
-    "    \n",
-    "def parametros_novos(df, molecula):\n",
-    "    df['Peso Molecula'] = molecula.apply(Descriptors.ExactMolWt)\n",
-    "    df['TPSA'] = molecula.apply(Chem.rdMolDescriptors.CalcTPSA) #Total Superficial Polar Area\n",
-    "    df['HBA'] = molecula.apply(Chem.rdMolDescriptors.CalcNumHBA) #Hidrogen bond acceptors\n",
-    "    df['HBD'] = molecula.apply(Chem.rdMolDescriptors.CalcNumHBD) #Hidrogen bond donnors\n",
-    "    df['LogP'] = molecula.apply(Descriptors.MolLogP) #calculus the hidrophobicity\n",
-    "    df['RotnBond'] = molecula.apply(Chem.rdMolDescriptors.CalcNumRotatableBonds) #calculus the number of rotation bonds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "a363595b",
    "metadata": {},
    "outputs": [],
@@ -991,17 +925,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "9f6558fc",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "treino_finger_cp = stri_to_mol(treino_finger_cp)\n",
-    "teste_finger_cp = stri_to_mol(teste_finger_cp)\n",
-    "treino_finger_with_linker = stri_to_mol(treino_finger_with_linker, with_linker1smi =True)\n",
-    "teste_finger_with_linker = stri_to_mol(teste_finger_with_linker, with_linker1smi =True)"
+    "treino_finger_cp = funcoes.stri_to_mol(treino_finger_cp)\n",
+    "teste_finger_cp = funcoes.stri_to_mol(teste_finger_cp)\n",
+    "treino_finger_with_linker = funcoes.stri_to_mol(treino_finger_with_linker, with_linker1smi =True)\n",
+    "teste_finger_with_linker = funcoes.stri_to_mol(teste_finger_with_linker, with_linker1smi =True)"
    ]
   },
   {
@@ -1009,7 +943,7 @@
    "id": "1cbede51",
    "metadata": {},
    "source": [
-    "Com os valores de `linker1smi` convertidos, temos agora todas as informações sobre cada molécula presente no `dataset`[$.^{[2]}$](#referencias) Do código que nos baseamos, ele adicionava os dados do array do `fingerprint` como colunas separadamente. Vamos tentar partir de outro ponto, nós vamos retirar a coluna `linker1smi` e realizar o VIF para diminuir a multicolinearidade e o número de dimensões."
+    "Com os valores de `linker1smi` convertidos, temos agora todas as informações sobre cada molécula presente no `dataset`[$.^{[2]}$](#referencias) Do código que nos baseamos, ele adicionava os dados do array do `fingerprint` como colunas separadamente. Vamos tentar partir de outro ponto, nós vamos retirar a coluna `linker1smi` e aplicar o VIF para diminuir a multicolinearidade e o número de dimensões."
    ]
   },
   {
@@ -1076,21 +1010,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "ff9f737c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from cod_izaque import selecao_fif\n",
-    "#VIF para dados_treino_finger\n",
     "LIMIAR_VIF = 5\n",
     "\n",
-    "VIF_treino_finger = selecao_vif(treino_finger_cp, LIMIAR_VIF)"
+    "VIF_treino_finger = funcoes.selecao_vif(treino_finger_cp, LIMIAR_VIF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "202f8d11",
    "metadata": {
     "tags": []
@@ -1332,7 +1264,7 @@
        "[361 rows x 12 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "f1dc67f1",
    "metadata": {},
    "outputs": [],
@@ -1352,12 +1284,12 @@
     "#VIF para dados_treino_finger\n",
     "LIMIAR_VIF = 5\n",
     "\n",
-    "VIF_teste_finger = selecao_vif(teste_finger_cp, LIMIAR_VIF)"
+    "VIF_teste_finger = funcoes.selecao_vif(teste_finger_cp, LIMIAR_VIF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "ab26df5e",
    "metadata": {
     "tags": []
@@ -1599,7 +1531,7 @@
        "[134 rows x 12 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75666,23 +75598,16 @@
     "[20] RDKit: Open-Source Cheminformatics Software. Disponível em: https://www.rdkit.org. <br>\n",
     "[21] Lightning Documentation, Available at: https://lightning.ai/docs/pytorch/stable/. Acessed on: 20 may 2024 <br>\n",
     "[22] Pytorch Discussion, available at: https://discuss.pytorch.org/t/how-to-create-mlp-model-with-arbitrary-number-of-hidden-layers/13124. Acessed on: 20 may 2024<br>\n",
-    "[23] sklearn Mean squared error, available at: https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html Acessed on: 27 may 2024<br> "
+    "[23] sklearn Mean squared error, available at: https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html Acessed on: 27 may 2024<br> \n",
+    "[24] Filtrar Linhas do Pandas por uma lista. Disponível em:  https://pt.stackoverflow.com/questions/309037/filtrar-linhas-no-pandas-por-uma-lista. <br>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5da8cf0-2f48-44a4-ac1f-7d938ceba427",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ilumpy",
    "language": "python",
-   "name": "python3"
+   "name": "ilumpy"
   },
   "language_info": {
    "codemirror_mode": {
@@ -75694,7 +75619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
